# personal_app_v1

./: CHECKLIST.md  DEPLOYMENT.md  OPTIMIZATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  STARTUP_COMPLETE.md  docker-compose.yml  health_check.py  start.bat  start.sh
backend/: .env  pyproject.toml  requirements.txt
backend/apps/core/: cache.py  decorators.py  exceptions.py
backend/apps/knowledge/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/knowledge/migrations/: 0001_initial.py
backend/apps/life_management/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/life_management/migrations/: 0001_initial.py
backend/apps/ocr/: admin.py  models.py  ocr_service.py  serializers.py  urls.py  views.py
backend/apps/ocr/migrations/: 0001_initial.py
backend/apps/services/: admin.py  models.py  serializers.py  third_party_apis.py  urls.py  views.py
backend/apps/services/migrations/: 0001_initial.py
backend/apps/tasks/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/apps/tasks/migrations/: 0001_initial.py
backend/apps/time_management/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/time_management/migrations/: 0001_initial.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite-env.d.ts  vite.config.ts
(+68 files in other folders)
